fix: footer text alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -347,6 +347,9 @@ footer {
       gap: 11px;
       font-size: 1rem;
     }
+    .handshake {
+      gap: 5px;
+    }
   }
   .footer-logo h2 {
     font-family: "Shrikhand", sans-serif;
